--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>王晶：web</title>
+    <meta name="description" content="王晶，个人使用github来完成的简历">
+    <meta name="keywords" content="王晶,个人,简历,github">
+    <meta name="author" content="王晶, 447405759@qq.com" /> 
+    <link rel="shortcut icon" type="image/ico" href="./logo-png.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.0.2/css/bootstrap.css">
+    <link rel="stylesheet" href="./index.css">
+    <script src="./index.js"></script>
+    <title>王晶：个人简历</title>
 </head>
 <body>
-   <h1>第一次使用github上传自己的网页</h1> 
-   
+  <div class="header">
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li role="presentation"><a href="#">About</a></li>
+        <li role="presentation"><a href="#">I Can Do</a></li>
+      </ul>
+  </div>
 </body>
 </html>
